--- a/css/media-object.css
+++ b/css/media-object.css
@@ -9,7 +9,7 @@
 
 .media-img-reversed {
 	float: right; 
-	margin-left: 0 0 0 10px;
+	margin: 0 0 0 10px;
 }
 
 .media-img-stacked {
